--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.2",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.2",
     "@vue/cli-service": "^3.0.0-rc.2",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "vue-template-compiler": "^2.5.16"
   },
   "babel": {
